--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@kaihendry/private-pkg-test": "^1.0.0"
   },
-   "workspaces": [
+  "workspaces": [
     "./packages/*"
   ]
 }
